' Generated by UML Generator
' Encoded: ZLJBRi8m4BpdAtmCXLIqHzGY41G92LMeLBrKFJZEAbtLiP7jS2Zbt-iaDir3XLoYP7PdihFZPAODLIRFUA2_KEofeXbXd6ezDqPXd1jOCobs-0ra77nY0eIXOXo2eEmY2uuW391ZG4WaP1Ohc92TfOgqG9XK2cGTIL01OoX57OpiPUYamgRAY3GrHgIZC2ZOAPZdaXWEQie5l2Zv7NZfPPeL8wlx6dhoPZEAedGwFDgr6MId4WgfIhNlVl-mn8F4v8-sXGGJMQs8LIOdVd45jbSooPcHLcE3sZnitVFql9fA8MoJI-CqLP1IvKcXLviG3_c1R3EZdEMSgbTfA2yi9ZAFUJ75C9FQAAfUGESPb4lnBcXSL9WXpewJ_I_plTqhofgqy-07REVRxByIvhPiRaxkJLMr5OgsjKkP-h6McABTIMMA8mF1aDPjdIDVlyszE7aauzlxkuv79tR5weYqtpFePSUkOUE8_S-k7ss56fa_Z3PoU1A72sbLxLUDT9LwMrcSgNr2Sz_IJHITlo07IGlvgODsgb7qC-rMtIwQnHc8nFuFVm4
' URL: http://www.plantuml.com/plantuml/uml/ZLJBRi8m4BpdAtmCXLIqHzGY41G92LMeLBrKFJZEAbtLiP7jS2Zbt-iaDir3XLoYP7PdihFZPAODLIRFUA2_KEofeXbXd6ezDqPXd1jOCobs-0ra77nY0eIXOXo2eEmY2uuW391ZG4WaP1Ohc92TfOgqG9XK2cGTIL01OoX57OpiPUYamgRAY3GrHgIZC2ZOAPZdaXWEQie5l2Zv7NZfPPeL8wlx6dhoPZEAedGwFDgr6MId4WgfIhNlVl-mn8F4v8-sXGGJMQs8LIOdVd45jbSooPcHLcE3sZnitVFql9fA8MoJI-CqLP1IvKcXLviG3_c1R3EZdEMSgbTfA2yi9ZAFUJ75C9FQAAfUGESPb4lnBcXSL9WXpewJ_I_plTqhofgqy-07REVRxByIvhPiRaxkJLMr5OgsjKkP-h6McABTIMMA8mF1aDPjdIDVlyszE7aauzlxkuv79tR5weYqtpFePSUkOUE8_S-k7ss56fa_Z3PoU1A72sbLxLUDT9LwMrcSgNr2Sz_IJHITlo07IGlvgODsgb7qC-rMtIwQnHc8nFuFVm4
' Generated on: 2025-11-30T11:06:41.069019300

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +getCorreo(): String
  +getDireccion(): String
  +toString(): String
}

class main {
  +{static} main(args: String[]): void
}

class Pedido {
  -cliente: Cliente
  -productos: List<Producto>
  --
  +Pedido(cliente: Cliente)
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

abstract class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getNombre(): String
  +getPrecio(): double
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -licencia: String
  -{static} IVA: double = 0.21
  --
  +ProductoDigital(nombre: String, precio: double, licencia: String)
  +calcularPrecioFinal(): double
  +getLicencia(): String
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +calcularPrecioFinal(): double
  +getCosteEnvio(): double
  +toString(): String
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml